...
                android:layout_height="wrap_content"

                android:layout_weight="0.2"
                android:text="@string/user" />

            <EditText
                android:id="@+id/editText_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/id_needID" />
        </LinearLayout>

...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnInitDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Login"
                tools:ignore="ButtonStyle" />

...
