<!-- 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pgrobotcliMainActivity2vity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>
 -->
 
  
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="162dp"
                android:layout_height="246dp"
                android:orientation="vertical"
                android:paddingLeft="1dip"
                android:paddingRight="1dip">

                <LinearLayout
                    android:id="@+id/layoutVideoS0"
                    android:layout_width="160dp"
                    android:layout_height="120dip"
                    android:layout_marginBottom="1dip"
                    android:background="#ff000000"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutVideoS2"
                    android:layout_width="160dip"
                    android:layout_height="120dip"
                    android:layout_marginBottom="1dip"
                    android:background="#ff000000"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="1dip"
                android:paddingRight="1dip">

                <LinearLayout
                    android:id="@+id/layoutVideoS1"
                    android:layout_width="160dip"
                    android:layout_height="120dip"
                    android:layout_marginBottom="1dip"
                    android:background="#ff000000"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutVideoS3"
                    android:layout_width="160dip"
                    android:layout_height="120dip"
                    android:layout_marginBottom="1dip"
                    android:background="#ff000000"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/id_chainman" />

            <EditText
                android:id="@+id/editText_chair"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="请找客服申请测试ID"
                android:inputType=""
                android:text="hwq2016001" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id_start" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Stop" />

            <Button
                android:id="@+id/btn_Clean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Clean" />

            <Button
                android:id="@+id/btn_LanScan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="LanScan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="Msg" />

            <EditText
                android:id="@+id/editText_notify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType=""
                android:text="hello" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_notifysend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Notify" />

            <Button
                android:id="@+id/btn_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Msg" />

            <Button
                android:id="@+id/btn_svr_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SvrRequest" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_recordstart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="recordstart" />

            <Button
                android:id="@+id/btn_recordstop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="recordstop" />

            <Button
                android:id="@+id/btn_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Test" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_file_put"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="FilePut" />

            <Button
                android:id="@+id/btn_file_get"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="FileGet" />

            <Button
                android:id="@+id/btn_clearlog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="clearlog" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_info"
                android:autoText="true" />
        </ScrollView>
    </LinearLayout>

</ScrollView>

